libagl: add support for GL_BGRA
glReadPixel data need BGRA type for Atmel SAM overlay buffer data.
add support for type BGRA.

Signed-off-by: Royce Jiang <jiangxd@embedinfo.com>

--- a/opengl/libs/enums.in
+++ b/opengl/libs/enums.in
@@ -176,6 +176,7 @@ GL_ENUM(0x1903,GL_RED_EXT)
 GL_ENUM(0x1906,GL_ALPHA)
 GL_ENUM(0x1907,GL_RGB)
 GL_ENUM(0x1908,GL_RGBA)
+GL_ENUM(0x1910,GL_BGRA)
 GL_ENUM(0x1909,GL_LUMINANCE)
 GL_ENUM(0x190A,GL_LUMINANCE_ALPHA)
 GL_ENUM(0x1D00,GL_FLAT)
